<resources>
    <string name="app_name">Darts</string>
    <string name="partie">Partie</string>
    <string name="historique">Historique</string>
    <string name="joueurs">Joueurs</string>
    <string name="description">Jeu de fléchettes</string>
    <string name="creer_une_partie">Créer une partie</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="ajouter">Ajouter</string>
    <string name="ajouter_joueur">Ajouter Joueur</string>
    <string name="liste_des_joueurs">Liste des Joueurs :</string>
    <string name="lancer_la_partie">Lancer la partie</string>
    <string name="button">Button</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="tir_manqu">Tir manqué</string>
    <string name="fin_de_la_partie">Fin de la Partie</string>
    <string name="pause">Pause</string>
    <string name="classement">Classement:</string>
    <string name="mode_de_jeu">Mode de jeu :</string>
    <string name="afficher_les_regles">Afficher les règles</string>

    <string-array name="ModeDeJeu">
        <item>501</item>
        <item>501 Double Out</item>
        <item>301</item>
        <item>301 Double Out</item>
    </string-array>
</resources>
